fixed board size, added footer with a link to the project repository on github, added horizontal scroll, changed the regex so it can allow more languages

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 body {
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
     font-weight: 400;
@@ -7,8 +10,6 @@ body {
     background-color: lightgray;
     background-image: url("../img/bg.jpg");
     background-size: 600px;
-
-    overflow-x: hidden;
 }
 
 *,
@@ -27,8 +28,12 @@ h1, h2, h3, h4, h5, h6 {
 /* header */
 
 .header {
+    position: sticky;
+    top: 0;
     width: 100%;
+    height: 60px;
     background-color: #F3E5C3;
+    z-index: 10;
 }
 
 .header__container {
@@ -36,8 +41,9 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    max-width: 1100px;
+    max-width: 1280px;
     margin: 0 auto;
+    padding: 0 10px;
     text-align: center;
 }
 
@@ -392,10 +398,19 @@ h1, h2, h3, h4, h5, h6 {
     margin: 15px 0 15px 5px;
 }
 
+.main {
+    overflow-y: hidden;
+}
+
 /* a container for items on the board */
 
 .container {
     transform-origin: 0 0;
+}
+
+.canvas {
+    position: absolute;
+    bottom: 0;
 }
 
 /* elements */
@@ -575,6 +590,7 @@ h1, h2, h3, h4, h5, h6 {
 
 ::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
 }
 
 ::-webkit-scrollbar-track {
@@ -589,4 +605,36 @@ h1, h2, h3, h4, h5, h6 {
 
 ::-webkit-scrollbar-thumb:hover {
     background: #a8675d;
+}
+
+.footer {
+    background-color: #C38370;
+}
+
+.footer__container {
+    width: 1280px;
+    margin: 0 auto;
+    padding: 30px 10px;
+}
+
+.footer-menu {
+    display: flex;
+}
+
+.footer-menu__item {
+    display: flex;
+    align-items: center;
+    margin-right: 30px;
+    font-size: 14px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.footer-menu__item:hover .footer-menu__link {
+    text-decoration: underline;
+}
+
+.new-window-icon {
+    margin-left: 5px;
+    font-size: 14px;
 }
